# rust-grpc-template

./: README.md
.github/workflows/: build.yml  template_values.toml
template/: Cargo.toml  README.md  build.rs  cargo-generate.toml  flake.nix  pre-script.rhai
template/.github/workflows/: audit.yml  cd.yml  ci.yml
template/proto/: service.proto
template/src/: main.rs  service.rs
